--- a/src/view/MainGamePage.fxml
+++ b/src/view/MainGamePage.fxml
@@ -10,16 +10,17 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Logic.MainGameLogicController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logic.MainGameLogicController">
    <children>
       <ImageView fx:id="BackGroundImage" fitHeight="900.0" fitWidth="1600.0" pickOnBounds="true">
          <image>
-            <Image url="@../Image/BGGoingPublic.png" />
+            <Image url="@../image/BGGoingPublic.png" />
          </image></ImageView>
       <VBox layoutX="-1.0" prefHeight="900.0" prefWidth="1600.0">
          <children>
             <HBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="200.0">
                <children>
+                  <Button fx:id="sellTemp" mnemonicParsing="false" onAction="#sellRandomItems" text="Sell" />
                   <Label alignment="TOP_CENTER" prefHeight="91.0" prefWidth="328.0" text="Going Public ">
                      <font>
                         <Font name="Gabriola" size="75.0" />
@@ -76,7 +77,7 @@
                                           </Label>
                                           <ImageView fx:id="amountChangereArrow" fitHeight="47.0" fitWidth="35.0" onMouseClicked="#changeAmountToBuy" onMousePressed="#changeAmountToBuy" pickOnBounds="true" preserveRatio="true">
                                              <image>
-                                                <Image url="@../Image/return.png" />
+                                                <Image url="@../image/return.png" />
                                              </image>
                                           </ImageView>
                                        </children>
@@ -85,7 +86,7 @@
                                        <children>
                                           <ImageView fitHeight="65.0" fitWidth="50.0" pickOnBounds="true">
                                              <image>
-                                                <Image url="@../Image/Desktop.png" />
+                                                <Image url="@../image/Desktop.png" />
                                              </image>
                                              <HBox.margin>
                                                 <Insets left="20.0" />
@@ -126,7 +127,7 @@
                                        <children>
                                           <ImageView fitHeight="54.0" fitWidth="50.0" pickOnBounds="true">
                                              <image>
-                                                <Image url="@../Image/Cam.png" />
+                                                <Image url="@../image/Cam.png" />
                                              </image>
                                              <HBox.margin>
                                                 <Insets left="20.0" />
@@ -167,7 +168,7 @@
                                        <children>
                                           <ImageView fitHeight="69.0" fitWidth="50.0" pickOnBounds="true">
                                              <image>
-                                                <Image url="@../Image/Xpod.png" />
+                                                <Image url="@../image/Xpod.png" />
                                              </image>
                                              <HBox.margin>
                                                 <Insets left="20.0" />
@@ -207,7 +208,7 @@
                                        <children>
                                           <ImageView fitHeight="48.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
-                                                <Image url="@../Image/Computer.png" />
+                                                <Image url="@../image/Computer.png" />
                                              </image>
                                              <HBox.margin>
                                                 <Insets left="20.0" />
@@ -247,7 +248,7 @@
                                        <children>
                                           <ImageView fitHeight="86.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
-                                                <Image url="@../Image/Xphone.png" />
+                                                <Image url="@../image/Xphone.png" />
                                              </image>
                                              <HBox.margin>
                                                 <Insets left="20.0" />
@@ -287,7 +288,7 @@
                                        <children>
                                           <ImageView fitHeight="122.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
-                                                <Image url="@../Image/ScreenPc.png" />
+                                                <Image url="@../image/ScreenPc.png" />
                                              </image>
                                              <HBox.margin>
                                                 <Insets left="20.0" />
@@ -465,7 +466,7 @@
                      <children>
                         <ImageView fitHeight="54.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../Image/gold_1.png" />
+                              <Image url="@../image/gold_1.png" />
                            </image>
                         </ImageView>
                         <Label prefHeight="57.0" prefWidth="87.0" text="Bank: ">
