Added a slider so you can set the selling price depending on your wish.

--- a/src/view/MainGamePage.fxml
+++ b/src/view/MainGamePage.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
@@ -61,13 +62,16 @@
                                                 <Insets right="150.0" />
                                              </padding>
                                           </Label>
-                                          <Label prefHeight="45.0" prefWidth="295.0" text="Cost Price: " underline="true">
+                                          <Label prefHeight="45.0" prefWidth="315.0" text="Cost Price: " underline="true">
                                              <font>
                                                 <Font name="Gabriola" size="36.0" />
                                              </font>
                                              <padding>
                                                 <Insets right="150.0" />
                                              </padding>
+                                             <HBox.margin>
+                                                <Insets left="40.0" />
+                                             </HBox.margin>
                                           </Label>
                                           <Label fx:id="amountChecker" onMousePressed="#changeAmountToBuy" prefHeight="45.0" prefWidth="56.0" text="1" underline="true">
                                              <font>
@@ -104,15 +108,20 @@
                                                 <Font name="Gabriola" size="29.0" />
                                              </font>
                                              <HBox.margin>
-                                                <Insets left="90.0" />
+                                                <Insets left="90.0" right="20.0" />
                                              </HBox.margin>
                                           </Label>
+                                          <Slider fx:id="dSlider" max="2.0" value="1.0">
+                                             <HBox.margin>
+                                                <Insets right="150.0" top="10.0" />
+                                             </HBox.margin>
+                                          </Slider>
                                           <Label fx:id="desktopCostPrice" prefHeight="35.0" prefWidth="70.0" text="299$">
                                              <font>
                                                 <Font name="Gabriola" size="29.0" />
                                              </font>
                                              <HBox.margin>
-                                                <Insets left="250.0" right="200.0" />
+                                                <Insets right="200.0" />
                                              </HBox.margin>
                                           </Label>
                                           <Button fx:id="desktopButton" mnemonicParsing="false" onAction="#buyD" prefHeight="37.0" prefWidth="50.0" style="-fx-border-color: black;" text="Buy">
@@ -145,15 +154,20 @@
                                                 <Font name="Gabriola" size="29.0" />
                                              </font>
                                              <HBox.margin>
-                                                <Insets left="90.0" />
+                                                <Insets left="90.0" right="20.0" />
                                              </HBox.margin>
                                           </Label>
+                                          <Slider fx:id="cSlider" max="2.0" value="1.0">
+                                             <HBox.margin>
+                                                <Insets right="150.0" top="10.0" />
+                                             </HBox.margin>
+                                          </Slider>
                                           <Label fx:id="camCostPrice" prefHeight="35.0" prefWidth="70.0" text="399$">
                                              <font>
                                                 <Font name="Gabriola" size="29.0" />
                                              </font>
                                              <HBox.margin>
-                                                <Insets left="250.0" right="200.0" />
+                                                <Insets right="200.0" />
                                              </HBox.margin>
                                           </Label>
                                           <Button mnemonicParsing="false" onAction="#buyC" prefHeight="37.0" prefWidth="50.0" style="-fx-border-color: black;" text="Buy">
@@ -162,6 +176,9 @@
                                              </font>
                                           </Button>
                                        </children>
+                                       <VBox.margin>
+                                          <Insets />
+                                       </VBox.margin>
                                     </HBox>
                                     <HBox prefHeight="100.0" prefWidth="200.0">
                                        <children>
@@ -185,15 +202,20 @@
                                                 <Font name="Gabriola" size="29.0" />
                                              </font>
                                              <HBox.margin>
-                                                <Insets left="90.0" />
+                                                <Insets left="90.0" right="20.0" />
                                              </HBox.margin>
                                           </Label>
+                                          <Slider max="2.0" value="1.0" fx:id="xpodSlider">
+                                             <HBox.margin>
+                                                <Insets right="150.0" top="10.0" />
+                                             </HBox.margin>
+                                          </Slider>
                                           <Label prefHeight="30.0" prefWidth="70.0" text="105$" fx:id="xpodCostPrice">
                                              <font>
                                                 <Font name="Gabriola" size="29.0" />
                                              </font>
                                              <HBox.margin>
-                                                <Insets left="250.0" right="200.0" />
+                                                <Insets right="200.0" />
                                              </HBox.margin>
                                           </Label>
                                           <Button mnemonicParsing="false" onAction="#buyXp" prefHeight="37.0" prefWidth="50.0" style="-fx-border-color: black;" text="Buy">
@@ -225,15 +247,20 @@
                                                 <Font name="Gabriola" size="29.0" />
                                              </font>
                                              <HBox.margin>
-                                                <Insets left="90.0" />
+                                                <Insets left="90.0" right="20.0" />
                                              </HBox.margin>
                                           </Label>
+                                          <Slider fx:id="lSlider" max="2.0" value="1.0">
+                                             <HBox.margin>
+                                                <Insets right="150.0" top="10.0" />
+                                             </HBox.margin>
+                                          </Slider>
                                           <Label fx:id="laptopCostPrice" prefHeight="35.0" prefWidth="70.0" text="999$">
                                              <font>
                                                 <Font name="Gabriola" size="29.0" />
                                              </font>
                                              <HBox.margin>
-                                                <Insets left="250.0" right="200.0" />
+                                                <Insets right="200.0" />
                                              </HBox.margin>
                                           </Label>
                                           <Button mnemonicParsing="false" onAction="#buyL" prefHeight="37.0" prefWidth="50.0" style="-fx-border-color: black;" text="Buy">
@@ -265,15 +292,20 @@
                                                 <Font name="Gabriola" size="29.0" />
                                              </font>
                                              <HBox.margin>
-                                                <Insets left="90.0" />
+                                                <Insets left="90.0" right="20.0" />
                                              </HBox.margin>
                                           </Label>
+                                          <Slider max="2.0" value="1.0" fx:id="xphoneSlider">
+                                             <HBox.margin>
+                                                <Insets right="150.0" top="10.0" />
+                                             </HBox.margin>
+                                          </Slider>
                                           <Label prefHeight="30.0" prefWidth="70.0" text="499$" fx:id="xphoneCostPrice">
                                              <font>
                                                 <Font name="Gabriola" size="29.0" />
                                              </font>
                                              <HBox.margin>
-                                                <Insets left="250.0" right="200.0" />
+                                                <Insets right="200.0" />
                                              </HBox.margin>
                                           </Label>
                                           <Button mnemonicParsing="false" onAction="#buyXP" prefHeight="37.0" prefWidth="50.0" style="-fx-border-color: black;" text="Buy">
@@ -305,15 +337,20 @@
                                                 <Font name="Gabriola" size="29.0" />
                                              </font>
                                              <HBox.margin>
-                                                <Insets left="90.0" />
+                                                <Insets left="90.0" right="20.0" />
                                              </HBox.margin>
                                           </Label>
+                                          <Slider fx:id="mSlider" max="2.0" value="1.0">
+                                             <HBox.margin>
+                                                <Insets right="150.0" top="10.0" />
+                                             </HBox.margin>
+                                          </Slider>
                                           <Label fx:id="monitorCostPrice" prefHeight="30.0" prefWidth="70.0" text="120$">
                                              <font>
                                                 <Font name="Gabriola" size="29.0" />
                                              </font>
                                              <HBox.margin>
-                                                <Insets left="250.0" right="200.0" />
+                                                <Insets right="200.0" />
                                              </HBox.margin>
                                           </Label>
                                           <Button mnemonicParsing="false" onAction="#buyM" prefHeight="37.0" prefWidth="50.0" style="-fx-border-color: black;" text="Buy">
