Implemented a progressBar to show when the next debt payment will happen.

--- a/src/view/MainGamePage.fxml
+++ b/src/view/MainGamePage.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -19,7 +20,7 @@
          </image></ImageView>
       <VBox layoutX="-1.0" prefHeight="900.0" prefWidth="1600.0">
          <children>
-            <HBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="200.0">
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                <children>
                   <Label alignment="TOP_CENTER" prefHeight="91.0" prefWidth="328.0" text="Going Public ">
                      <font>
@@ -544,6 +545,19 @@
                               <Font name="Gabriola" size="40.0" />
                            </font>
                         </Label>
+                        <Label text="Next sale in: ">
+                           <font>
+                              <Font name="Gabriola" size="41.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                        </Label>
+                        <ProgressBar fx:id="dayProgressBar" prefWidth="200.0" progress="0.0">
+                           <HBox.margin>
+                              <Insets top="20.0" />
+                           </HBox.margin>
+                        </ProgressBar>
                      </children>
                   </HBox>
                </children></Pane>
