--- a/src/view/MainGamePage.fxml
+++ b/src/view/MainGamePage.fxml
@@ -7,9 +7,11 @@
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logic.MainGameLogicController">
@@ -519,7 +521,7 @@
                               <Font name="Gabriola" size="40.0" />
                            </font>
                         </Label>
-                        <Label prefHeight="57.0" prefWidth="260.0" text="Company Value: ">
+                        <Label prefHeight="57.0" prefWidth="257.0" text="Company Value: ">
                            <font>
                               <Font name="Gabriola" size="40.0" />
                            </font>
@@ -527,7 +529,7 @@
                               <Insets />
                            </opaqueInsets>
                         </Label>
-                        <Label fx:id="marketValueView" prefHeight="57.0" prefWidth="228.0" text="m Value ">
+                        <Label fx:id="marketValueView" prefHeight="57.0" prefWidth="186.0" text="m Value ">
                            <font>
                               <Font name="Gabriola" size="40.0" />
                            </font>
@@ -545,7 +547,7 @@
                               <Font name="Gabriola" size="40.0" />
                            </font>
                         </Label>
-                        <Label text="Next sale in: ">
+                        <Label text="Next debt payment : ">
                            <font>
                               <Font name="Gabriola" size="41.0" />
                            </font>
@@ -566,10 +568,207 @@
                               <Insets left="10.0" top="10.0" />
                            </HBox.margin>
                         </ImageView>
+                        <Button fx:id="desktopButton1" mnemonicParsing="false" onAction="#openChart" prefHeight="37.0" prefWidth="50.0" style="-fx-border-color: black;" text="Test">
+                           <font>
+                              <Font name="Gabriola" size="18.0" />
+                           </font>
+                        </Button>
                      </children>
                   </HBox>
                </children></Pane>
          </children>
       </VBox>
+      <AnchorPane fx:id="coverBlack" opacity="0.5" prefHeight="855.0" prefWidth="1600.0" style="-fx-background-color: black;" visible="false" />
+      <AnchorPane fx:id="modal" layoutX="200.0" layoutY="50.0" prefHeight="800.0" prefWidth="1200.0" style="-fx-background-color: white;" visible="false">
+         <children>
+            <VBox alignment="TOP_CENTER" prefHeight="800.0" prefWidth="1200.0">
+               <children>
+                  <Label text="Demand ">
+                     <font>
+                        <Font name="Gabriola" size="69.0" />
+                     </font>
+                  </Label>
+                  <HBox alignment="BOTTOM_LEFT" prefHeight="700.0" prefWidth="1200.0">
+                     <children>
+                        <VBox prefHeight="618.0" prefWidth="100.0" style="-fx-border-color: black;">
+                           <children>
+                              <Label text="20">
+                                 <font>
+                                    <Font name="Gabriola" size="44.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets left="10.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <Label text="18">
+                                 <font>
+                                    <Font name="Gabriola" size="44.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets left="10.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <Label text="16">
+                                 <font>
+                                    <Font name="Gabriola" size="44.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets left="10.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <Label text="14">
+                                 <font>
+                                    <Font name="Gabriola" size="44.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets left="10.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <Label text="12">
+                                 <font>
+                                    <Font name="Gabriola" size="44.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets left="10.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <Label text="10">
+                                 <font>
+                                    <Font name="Gabriola" size="44.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets left="10.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <Label text="8">
+                                 <font>
+                                    <Font name="Gabriola" size="44.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets left="10.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <Label text="6">
+                                 <font>
+                                    <Font name="Gabriola" size="44.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets left="10.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <Label text="4">
+                                 <font>
+                                    <Font name="Gabriola" size="44.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets left="10.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <Label text="2">
+                                 <font>
+                                    <Font name="Gabriola" size="44.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets left="10.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <Label text="0">
+                                 <font>
+                                    <Font name="Gabriola" size="44.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets left="10.0" />
+                                 </VBox.margin>
+                              </Label>
+                           </children>
+                        </VBox>
+                        <Rectangle fx:id="desktopLine" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="20.0" stroke="BLACK" strokeType="INSIDE" width="20.0">
+                           <HBox.margin>
+                              <Insets left="80.0" right="150.0" />
+                           </HBox.margin>
+                        </Rectangle>
+                        <Rectangle fx:id="camLine" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="20.0" stroke="BLACK" strokeType="INSIDE" width="20.0">
+                           <HBox.margin>
+                              <Insets right="150.0" />
+                           </HBox.margin>
+                        </Rectangle>
+                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="20.0" stroke="BLACK" strokeType="INSIDE" width="20.0" fx:id="xpodLine">
+                           <HBox.margin>
+                              <Insets right="150.0" />
+                           </HBox.margin>
+                        </Rectangle>
+                        <Rectangle fx:id="laptopLine" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="20.0" stroke="BLACK" strokeType="INSIDE" width="20.0">
+                           <HBox.margin>
+                              <Insets right="180.0" />
+                           </HBox.margin>
+                        </Rectangle>
+                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="20.0" stroke="BLACK" strokeType="INSIDE" width="20.0" fx:id="xphoneLine">
+                           <HBox.margin>
+                              <Insets right="200.0" />
+                           </HBox.margin>
+                        </Rectangle>
+                        <Rectangle fx:id="monitorLine" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="20.0" stroke="BLACK" strokeType="INSIDE" width="20.0">
+                           <HBox.margin>
+                              <Insets right="75.0" />
+                           </HBox.margin>
+                        </Rectangle>
+                     </children>
+                  </HBox>
+                  <HBox prefHeight="90.0" prefWidth="1200.0" style="-fx-border-color: black;">
+                     <children>
+                        <Label text="Desktop">
+                           <font>
+                              <Font name="Gabriola" size="40.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets left="130.0" />
+                           </HBox.margin>
+                        </Label>
+                        <Label text="Cam">
+                           <font>
+                              <Font name="Gabriola" size="40.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets left="100.0" />
+                           </HBox.margin>
+                        </Label>
+                        <Label text="Xpod">
+                           <font>
+                              <Font name="Gabriola" size="40.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets left="100.0" />
+                           </HBox.margin>
+                        </Label>
+                        <Label text="Laptop">
+                           <font>
+                              <Font name="Gabriola" size="40.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets left="100.0" />
+                           </HBox.margin>
+                        </Label>
+                        <Label text="Xphone">
+                           <font>
+                              <Font name="Gabriola" size="40.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets left="100.0" />
+                           </HBox.margin>
+                        </Label>
+                        <Label text="Pc Monitor">
+                           <font>
+                              <Font name="Gabriola" size="40.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets left="100.0" />
+                           </HBox.margin>
+                        </Label>
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
+         </children>
+      </AnchorPane>
    </children>
 </Pane>
