--- a/src/view/IntroToGame.fxml
+++ b/src/view/IntroToGame.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
@@ -13,17 +14,16 @@
             <Image url="@../image/BGGoingPublic.png" />
          </image>
       </ImageView>
-      <Label layoutX="93.0" layoutY="49.0" opacity="0.87" prefHeight="559.0" prefWidth="1418.0" style="-fx-background-color: white; -fx-border-color: black;" />
       <Label layoutX="676.0" layoutY="639.0" opacity="0.87" prefHeight="80.0" prefWidth="252.0" style="-fx-background-color: white; -fx-border-color: black;" />
       <Label alignment="CENTER" layoutX="676.0" layoutY="639.0" onMouseClicked="#continueToGame" prefHeight="80.0" prefWidth="252.0" text="Start Game">
          <font>
             <Font name="Gabriola" size="40.0" />
          </font>
       </Label>
-      <Label alignment="TOP_LEFT" layoutX="93.0" layoutY="49.0" prefHeight="559.0" prefWidth="1418.0" text="This panel will contain the game intro ">
+      <TextArea layoutX="93.0" layoutY="49.0" opacity="0.92" prefHeight="559.0" prefWidth="1418.0" text="You have decided to start a new company that sells electronics, but dosen´t have the start capital needed to open shop and buy inventory. &#10;so you decied to go too the bank and take out a loan.  You now all what you need to start your adventure as a buisness owner.  &#10;So get out there and conqure the IT world, but make sure to remember to have enough money to pay back the instalments every month, you can track when it´ s time to pay the instalments by looking and the progressbar in the bottem right conner.  &#10;" wrapText="true">
          <font>
-            <Font name="Gabriola" size="43.0" />
+            <Font name="Gabriola" size="36.0" />
          </font>
-      </Label>
+      </TextArea>
    </children>
 </Pane>
