--- a/src/view/MainMenu.fxml
+++ b/src/view/MainMenu.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
@@ -26,10 +28,65 @@
          </font>
       </Label>
       <Label layoutX="641.0" layoutY="499.0" opacity="0.81" prefHeight="91.0" prefWidth="271.0" style="-fx-background-color: white; -fx-border-color: black;" />
-      <Label fx:id="CreditsButton" alignment="CENTER" layoutX="641.0" layoutY="499.0" prefHeight="91.0" prefWidth="271.0" text="Credits" underline="true">
+      <Label fx:id="creditsButton" alignment="CENTER" layoutX="641.0" layoutY="499.0" onMouseClicked="#openCredits" prefHeight="91.0" prefWidth="271.0" text="Credits" underline="true">
          <font>
             <Font name="Gabriola" size="50.0" />
          </font>
       </Label>
+      <AnchorPane fx:id="creditsPane" layoutX="77.0" layoutY="93.0" prefHeight="600.0" prefWidth="1400.0" style="-fx-background-color: white;" visible="false">
+         <children>
+            <Label layoutX="637.0" layoutY="26.0" text="Credits" underline="true">
+               <font>
+                  <Font name="Gabriola" size="56.0" />
+               </font>
+            </Label>
+            <Label layoutX="609.0" layoutY="120.0" text="Game Coded By: ">
+               <font>
+                  <Font name="Gabriola" size="34.0" />
+               </font>
+            </Label>
+            <Label layoutX="662.0" layoutY="296.0" text="Kenny">
+               <font>
+                  <Font name="Gabriola" size="29.0" />
+               </font>
+            </Label>
+            <Label layoutX="579.0" layoutY="404.0" text="Sound By: BenSound.com : ">
+               <font>
+                  <Font name="Gabriola" size="29.0" />
+               </font>
+            </Label>
+            <Button fx:id="closeCreditsButton" layoutX="586.0" layoutY="473.0" mnemonicParsing="false" onAction="#closeCredits" prefHeight="61.0" prefWidth="228.0" style="-fx-background-color: white; -fx-border-color: black;" text="Close Credits" />
+            <Label layoutX="591.0" layoutY="331.0" text=" Mikkel Boye Rasmussen">
+               <font>
+                  <Font name="Gabriola" size="29.0" />
+               </font>
+            </Label>
+            <Label layoutX="588.0" layoutY="173.0" text="Anders Hjordrup Larsen">
+               <font>
+                  <Font name="Gabriola" size="29.0" />
+               </font>
+            </Label>
+            <Label layoutX="651.0" layoutY="254.0" text="Assets: ">
+               <font>
+                  <Font name="Gabriola" size="35.0" />
+               </font>
+            </Label>
+            <Label layoutX="86.0" layoutY="103.0" style="-fx-rotate: -20;" text="Guidance By: ">
+               <font>
+                  <Font name="Gabriola" size="42.0" />
+               </font>
+            </Label>
+            <Label layoutX="135.0" layoutY="151.0" style="-fx-rotate: -20;" text="The Afro ">
+               <font>
+                  <Font name="Gabriola" size="36.0" />
+               </font>
+            </Label>
+            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="134.0" layoutY="186.0" pickOnBounds="true" preserveRatio="true" style="-fx-rotate: -20;">
+               <image>
+                  <Image url="@../image/theFro.png" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
    </children>
 </Pane>
